--- a/index.html
+++ b/index.html
@@ -178,6 +178,17 @@
   </div>
   </main>
 
+  <!-- GDPR Consent Modal -->
+  <div id="gdpr-modal" class="modal" style="display: none;">
+    <div class="modal-content">
+      <h2>Privacy Notice</h2>
+      <p>This website uses your browser's localStorage to save your progress across sessions. We respect your privacy and do not store any of your data.</p>
+      <button id="accept-gdpr">Accept</button>
+      <button id="reject-gdpr">Decline (Exit)</button>
+    </div>
+  </div>
+  <div id="gdpr-blocker"></div>
+
   <!-- Import/Export Modal -->
   <div id="import-export-modal" class="modal" style="display: none;">
     <div class="modal-content">
