--- a/index.html
+++ b/index.html
@@ -334,8 +334,8 @@
 </footer>
 
   <!-- Scripts --> 
-  <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/marked@latest/lib/marked.umd.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js" defer></script>
+  <script src="https://cdn.jsdelivr.net/npm/marked@latest/lib/marked.umd.js" defer></script>
   <script src="script.js" defer></script>
 </body>
 </html>
