--- a/index.html
+++ b/index.html
@@ -61,7 +61,14 @@
   <center><span id="season2_countdown" style="font-size:1.4rem; font-weight:700; background:linear-gradient(90deg, #ff8c00, #ffb800, #ffd700); -webkit-background-clip:text; background-clip:text; -webkit-text-fill-color:transparent; vertical-align:middle;""></span></center>
   
   <!-- Page Title -->
-  <h1 id="page-title" title="Toggle between Global/SEA">Blue Protocol: Star Resonance Checklist</h1>
+  <div style="text-align:center; margin-bottom:20px;">
+    <h1 id="page-title" title="Click to toggle between Global & SEA (affects timers & day count)">
+      Blue Protocol: Star Resonance Checklist
+    </h1>
+  <small>
+    Click the title to switch between <strong>Global</strong> and <strong>SEA</strong> — this updates the <strong>day count</strong> and <strong>all timers</strong>.
+  </small>
+  </div>
 
   <!-- Event Timers -->
   <div id="event_timers" class="event-timers" aria-live="polite">
