--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       Blue Protocol: Star Resonance Checklist
     </h1>
   <small>
-    Click the title to switch between <strong>Global</strong> and <strong>SEA</strong> — this updates the <strong>day count</strong> and <strong>all timers</strong>.
+    Click the title to switch between <strong>Global</strong> and <strong>SEA</strong> — this updates the <strong>day count</strong>, <strong>all timers</strong> and the <strong>server time</strong>.
   </small>
   </div>
 
