--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
   
   <!-- Page Title -->
   <div style="text-align:center; margin-bottom:10px;">
-    <h1 id="page-title" title="Click to toggle between Global & SEA (affects timers & day count)">
+    <h1 id="page-title">
       Blue Protocol: Star Resonance Checklist
     </h1>
   <small>
