--- a/index.html
+++ b/index.html
@@ -57,16 +57,16 @@
   </div>
   
   <main>
-  <!-- Season 2 Countdown -->
-  <center><span id="season2_countdown" style="font-size:1.4rem; font-weight:700; background:linear-gradient(90deg, #ff8c00, #ffb800, #ffd700); -webkit-background-clip:text; background-clip:text; -webkit-text-fill-color:transparent; vertical-align:middle;""></span></center>
-  
+  <!-- Season 2 Release Date -->
+  <div style="text-align:center;font-size:1.4rem;font-weight:700;background:linear-gradient(90deg,#fff700,#ffe259,#00f260,#0575e6);-webkit-background-clip:text;background-clip:text;-webkit-text-fill-color:transparent;text-shadow:0 0 8px rgba(255,247,0,.35),0 0 16px rgba(5,117,230,.4);letter-spacing:.06em;margin-top: -10px;">Season 2 starts on January 15, 2026!</div>
+ 
   <!-- Page Title -->
   <div style="text-align:center; margin-bottom:10px;">
     <h1 id="page-title">
       Blue Protocol: Star Resonance Checklist
     </h1>
   <small>
-    Click the title to switch between <strong>Global</strong> and <strong>SEA</strong> — this updates the <strong>day count</strong>, <strong>all timers</strong> and the <strong>server time</strong>.
+    Click the title to switch between <strong>Global</strong> and <strong>SEA</strong> — this updates the <strong>day count</strong>, <strong>all timers</strong> and the <strong>server time</strong>
   </small>
   </div>
 
