--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
   <div class="contact">
   <small>
     <address>
-      <a href="https://discordredirect.discordsafe.com/users/96620826689822720" target="_blank" title="Contact @Teawase on Discord" rel="noopener noreferrer">Made with ❤️ by Teawase</a>
+      <a href="https://discord.com/users/96620826689822720" target="_blank" title="Contact @Teawase on Discord" rel="noopener noreferrer">Made with ❤️ by Teawase</a>
     </address>
   </small>
   </div> 
