--- a/index.html
+++ b/index.html
@@ -72,27 +72,27 @@
 
   <!-- Event Timers -->
   <div id="event_timers" class="event-timers" aria-live="polite">
-    <div id="daily_reset_timer" class="event-timer" title="Refresh All Timers">
+    <div id="daily_reset_timer" class="event-timer">
       <div class="name">🔆 Daily Reset</div>
       <div class="countdown">Loading…</div>
     </div>
-    <div id="wb_crusade_timer" class="event-timer" title="Refresh All Timers">
+    <div id="wb_crusade_timer" class="event-timer">
       <div class="name">⚔️ World Boss</div>
       <div class="countdown">Loading…</div>
     </div>
-    <div id="weekly_reset_timer" class="event-timer" title="Refresh All Timers">
+    <div id="weekly_reset_timer" class="event-timer">
       <div class="name">⏳ Weekly Reset</div>
       <div class="countdown">Loading…</div>
     </div>
-    <div id="guild_hunt_timer" class="event-timer" title="Refresh All Timers">
+    <div id="guild_hunt_timer" class="event-timer">
       <div class="name">🏹 Guild Hunt</div>
       <div class="countdown">Loading…</div>
     </div>
-    <div id="guild_dance_timer" class="event-timer" title="Refresh All Timers">
+    <div id="guild_dance_timer" class="event-timer">
       <div class="name">🎉 Guild Dance</div>
       <div class="countdown">Loading…</div>
     </div>
-    <div id="stimen_vaults_timer" class="event-timer" title="Refresh All Timers">
+    <div id="stimen_vaults_timer" class="event-timer">
       <div class="name">💎 Stimen Vaults</div>
       <div class="countdown">Loading…</div>
     </div>
