--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
   
   <main>
   <!-- Season 2 Release Date -->
-  <div style="text-align:center;font-size:1.4rem;font-weight:700;background:linear-gradient(90deg,#fff700,#ffe259,#00f260,#0575e6);-webkit-background-clip:text;background-clip:text;-webkit-text-fill-color:transparent;text-shadow:0 0 8px rgba(255,247,0,.35),0 0 16px rgba(5,117,230,.4);letter-spacing:.06em;margin-top: -10px;">Season 2 starts on January 15, 2026!</div>
+  <div style="text-align:center;font-size:1.4rem;font-weight:700;letter-spacing:.06em;margin-top:-10px"><span style="background:linear-gradient(90deg,#fff700,#ffe259,#00f260);-webkit-background-clip:text;background-clip:text;-webkit-text-fill-color:transparent;color:transparent;text-shadow:0 0 8px rgba(255,247,0,.35),0 0 16px rgba(0,242,96,.4)">Season 2 starts on January 15, 2026</span> <span style="color:#ff2d2d">- Complete -Stimen Vaults- before Season 2 maintenance!</span></div>
  
   <!-- Page Title -->
   <div style="text-align:center; margin-bottom:10px;">
