--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
     <div class="modal-content" style="max-width: 420px;">
       <h2>Custom Background</h2>
       <p style="font-size:0.9rem; opacity:0.9;">Paste a direct link (.jpg, .png, .gif, .webp, .bpm, .avif, .svg)</p>
+	  <p style="font-size:0.8rem; color:#ff9999;">Tip: Use compressed images (<500KB) to avoid memory issues.</p>
       <img id="preview-img" src="" alt="Background Preview" 
            style="display:none; max-width:100%; max-height:400px; object-fit:contain; border-radius:9px; margin:15px 0; background:#333;">
       <input type="text" id="wallpaper-url" placeholder="Example: https://i.imgur.com/RXANjLd.png" 
