--- a/index.html
+++ b/index.html
@@ -309,35 +309,31 @@
 <footer class="resources-footer">
   <h2>Useful Resources</h2>
   <div class="resources-grid">
-    <a href="https://bp-db.de/" target="_blank" rel="noopener noreferrer" class="resource-link" title="Made by Lunixx" data-tooltip="Players Database">
+    <a href="https://bp-db.de" target="_blank" rel="noopener noreferrer" class="resource-link" title="Made by Lunixx" data-tooltip="Players Database">
       <span class="link-icon">👥</span>
       <span class="link-text">Players Database</span>
     </a>
-    <a href="https://bptimer.com/" target="_blank" rel="noopener noreferrer" class="resource-link" title="Made by Wohee" data-tooltip="Boss Timers">
+    <a href="https://bptimer.com" target="_blank" rel="noopener noreferrer" class="resource-link" title="Made by Wohee" data-tooltip="Boss Timers">
       <span class="link-icon">⚡</span>
       <span class="link-text">Boss Timers</span>
     </a>
-	<a href="https://bpevents.poofcakes.com/" target="_blank" rel="noopener noreferrer" class="resource-link" title="Made by Poofcakes" data-tooltip="Event Tracker">
+	<a href="https://bpevents.poofcakes.com" target="_blank" rel="noopener noreferrer" class="resource-link" title="Made by Poofcakes" data-tooltip="Event Tracker">
       <span class="link-icon">📆</span>
       <span class="link-text">Event Tracker</span>
     </a>
-    <a href="https://bpsr.app/" target="_blank" rel="noopener noreferrer" class="resource-link" title="Made by deusexitium" data-tooltip="DPS Meter">
+    <a href="https://github.com/Blue-Protocol-Source/BPSR-ZDPS" target="_blank" rel="noopener noreferrer" class="resource-link" title="Made by deusexitium" data-tooltip="DPS Meter">
       <span class="link-icon">⚔️</span>
       <span class="link-text">DPS Meter</span>
     </a>
-	<a href="https://github.com/mrsnakke/BPSR-AutoModules/" target="_blank" rel="noopener noreferrer" class="resource-link" title="Made by MrSnakeVT" data-tooltip="Module Optimizer">
-      <span class="link-icon">🧩</span>
-      <span class="link-text">Module Optimizer</span>
-    </a>
-	<a href="https://starresonance.th.gl/" target="_blank" rel="noopener noreferrer" class="resource-link" title="Made by DevLeon" data-tooltip="Interactive Maps">
+	<a href="https://starresonance.th.gl" target="_blank" rel="noopener noreferrer" class="resource-link" title="Made by DevLeon" data-tooltip="Interactive Maps">
       <span class="link-icon">🗺️</span>
       <span class="link-text">Interactive Maps</span>
     </a>	
-	<a href="https://maxroll.gg/blue-protocol/" target="_blank" rel="noopener noreferrer" class="resource-link" data-tooltip="Maxroll Guides">
+	<a href="https://maxroll.gg/blue-protocol" target="_blank" rel="noopener noreferrer" class="resource-link" data-tooltip="Maxroll Guides">
       <span class="link-icon">📘</span>
       <span class="link-text">Maxroll Guides</span>
     </a>
-	<a href="https://www.prydwen.gg/blue-protocol/" target="_blank" rel="noopener noreferrer" class="resource-link" data-tooltip="Prydwen Wiki">
+	<a href="https://www.prydwen.gg/blue-protocol" target="_blank" rel="noopener noreferrer" class="resource-link" data-tooltip="Prydwen Wiki">
       <span class="link-icon">📚</span>
       <span class="link-text">Prydwen Wiki</span>
     </a>
