--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 	  <p style="font-size:0.8rem; color:#ff9999;">Tip: Use compressed images (<500KB) to avoid memory issues.</p>
       <img id="preview-img" src="" alt="Background Preview" 
            style="display:none; max-width:100%; max-height:400px; object-fit:contain; border-radius:9px; margin:15px 0; background:#333;">
-      <input type="text" id="wallpaper-url" placeholder="Example: https://i.imgur.com/RXANjLd.png" 
+      <input type="text" id="wallpaper-url" placeholder="Example: https://i.imgur.com/k1AXmB4.jpeg" 
              style="width:85%; padding:10px; background:#333; border:none; border-radius:9px; color:#eee; margin:15px 0;">
       <div style="display:flex; gap:15px; justify-content:center;">
         <button id="apply-wallpaper">Apply</button>
